To reproduce this: Just right click the desktop, go to properties, and then click the Screensaver tab. Notice the "Apply" button is enabled, yet no parameters were set (obviously) so it makes no sense for this to happen!
To reproduce this: Just right click the desktop, go to properties, and then click the Screensaver tab. Notice the "Apply" button is enabled, yet no parameters were set (obviously) so it makes no sense for this to happen!