[DESK] Change the property "Screensaver" page on text change

If the user takes action on the edit box control of "Screensaver" dialog page, enable the "Apply" property button.

CORE-16280